# PhycoBot

./: .gitignore  README.md  bot.db  main.py  pyproject.toml  requirements.txt
